--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -68,7 +68,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=dungeoncreator.DungeonCreator
+main.class=dungeoncreator.LoadImageApp
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
